--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@plugoinc/common",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -47,5 +47,8 @@
     "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/$1"
     }
-  }
+  },
+  "files": [
+    "dist/**/*"
+  ]
 }
