--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": " jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "lint": "eslint \"src/**/*.ts\" --fix"
   },
   "license": "MIT",
-  "dependencies": {
-    "long": "^5.2.3"
+  "dependencies": {},
+  "peerDependencies": {
+    "long": "^5.2.3",
+    "@google-cloud/pubsub": "^4.0.6"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
@@ -28,7 +30,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "wait-on": "^7.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
