--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "long": "^5.2.3"
+    "long": "^5.2.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
