--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "google-protobuf": "^3.21.2",
     "long": "^5.2.3",
     "winston": "^3.11.0"
   },
