--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@nestjs/common": "^10.3.9",
+    "@nestjs/swagger": "^7.3.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "google-protobuf": "^3.21.2",
     "long": "^5.2.3",
+    "rxjs": "^7.8.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
